[package]
name = "gelato-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Luke Tchang <luke@nomad.xyz>", "James Prestwich <james@nomad.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.8"
serde_json = { version = "1.0", default-features = false }

ethers-core = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
thiserror = { version = "1.0.22", default-features = false }
async-trait = { version = "0.1.42", default-features = false }
futures-util = "0.3.12"
color-eyre = "0.5.0"
reqwest = { version = "0.11.10", features = ["json"]}
tracing = "0.1.22"
once_cell = "1.12.0"

[[bin]]
name = "status"
path = "bin/status.rs"
