[package]
name = "gelato-sdk"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Luke Tchang <luke@nomad.xyz>", "James Prestwich <james@nomad.xyz>"]
description = "SDK for the Gelato transaction relay service"
repository = "https://github.com/nomad-xyz/gelato-sdk"
license = "MIT OR Apache-2.0"
keywords = ["Ethereum", "Gelato"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.8"
serde_json = { version = "1.0", default-features = false }
reqwest = { version = "0.11.10", features = ["json"]}
once_cell = "1.12.0"

ethers-core = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }

[dev-dependencies]
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "status"
path = "bin/status.rs"