[package]
name = "gelato-sdk"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Luke Tchang <luke@nomad.xyz>", "James Prestwich <james@nomad.xyz>"]
description = "SDK for the Gelato transaction relay service"
repository = "https://github.com/nomad-xyz/gelato-sdk"
license = "MIT OR Apache-2.0"
keywords = ["Ethereum", "Gelato"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.8"
serde_json = { version = "1.0", default-features = false }
reqwest = { version = "0.11.10", features = ["json"]}
once_cell = "1.12.0"

# ethers-core = "0.6.3"
ethers-core = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features = ["eip712"] }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }

thiserror = "1.0.31"
hex = "0.4.3"
eyre = "0.6.8"
tracing = "0.1.35"
futures-util = "0.3.21"
pin-project = "1.0.12"
futures-timer = "3.0.2"
url = "2.2"

[dev-dependencies]
tracing-test = "0.2.3"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features = ["eip712"] }
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "status"
path = "bin/status.rs"
